--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
     <div style="background-color: black;">
-      <button style="border-style: none; cursor: pointer;"><i class="fa fa-play" aria-hidden="true" style="color: white;"></i></button>
+      <button style="border-style: none; cursor: pointer; background: transparent;">
+        <i class="fa fa-play" aria-hidden="true" style="color: white;"></i>
+      </button>
     </div>
   </div>
 
