--- a/index.html
+++ b/index.html
@@ -4,17 +4,38 @@
   <title>Плеер ГОСТфильм</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+  <style type="text/css">
+    .player-container {
+      width: 800px;
+      height: 600px;
+    }
+    .player-video-container {
+      width: 100%;
+      height: 100%;
+    }
+    .player-buttons-wrapper {
+      background-color: black;
+    }
+    .player-button {
+      border-style: none;
+      cursor: pointer;
+      background: transparent;
+    }
+    .player-button i {
+      color: white;
+    }
+  </style>
 </head>
 <body>
-  <div id="player" style="width: 800px; height: 600px;">
+  <div id="player" class="player-container">
 
-    <div class="js-video-container" style="width: 100%; height: 100%"></div>
-    <div style="background-color: black;">
-      <button class="js-play-button" style="border-style: none; cursor: pointer; background: transparent;">
-        <i class="fa fa-play" aria-hidden="true" style="color: white;"></i>
+    <div class="js-video-container player-video-container"></div>
+    <div class="player-buttons-wrapper">
+      <button class="js-play-button player-button">
+        <i class="fa fa-play" aria-hidden="true"></i>
       </button>
-      <button class="js-pause-button" style="border-style: none; cursor: pointer; background: transparent;" hidden>
-        <i class="fa fa-pause" aria-hidden="true" style="color: white;"></i>
+      <button class="js-pause-button player-button" hidden>
+        <i class="fa fa-pause" aria-hidden="true"></i>
       </button>
     </div>
   </div>
