--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
     .player-button i {
       color: white;
     }
+    .shadow {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+     }
   </style>
 </head>
 <body>
-  <div id="player" class="player-container">
+  <div id="player" class="player-container shadow">
 
     <div class="js-video-container player-video-container"></div>
     <div class="player-buttons-wrapper">
