--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     .player-container {
       width: 800px;
       height: 600px;
+      display: flex;
+      flex-direction: column;
     }
     .player-video-container {
-      width: 100%;
-      height: 100%;
+      flex-grow: 1;
     }
     .player-buttons-wrapper {
       background-color: black;
+      flex-grow: 0;
     }
     .player-button {
       border-style: none;
