Make button icons larger

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       background: transparent;
     }
     .player-button i {
+      font-size: 20pt;
+      line-height: normal;
       color: white;
     }
     .shadow {
