--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
       background: transparent;
     }
     .player-button i {
-      font-size: 20pt;
+      font-size: 20px;
       line-height: normal;
       color: white;
+      padding: 10px 0px 10px 15px;
+      height: 20px;
+      width: 20px;
     }
     .shadow {
       box-shadow: 0 0 10px rgba(0, 0, 0, 1);
