--- a/index.html
+++ b/index.html
@@ -17,19 +17,24 @@
     .player-buttons-wrapper {
       background-color: black;
       flex-grow: 0;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
     }
     .player-button {
       border-style: none;
       cursor: pointer;
       background: transparent;
+      height: 50px;
+      width: 50px;
     }
     .player-button i {
       font-size: 20px;
       line-height: normal;
       color: white;
-      padding: 10px 0px 10px 15px;
-      height: 20px;
-      width: 20px;
+    }
+    .player-button-spacer {
+      flex-grow: 1;
     }
     .shadow {
       box-shadow: 0 0 10px rgba(0, 0, 0, 1);
@@ -53,7 +58,10 @@
       <button class="js-volume-button player-button" hidden>
         <i class="fa fa-volume-off" aria-hidden="true"></i>
       </button>
-       
+      <div class="player-button-spacer"></div>
+      <button class="js-fullscreen-button player-button">
+        <i class="fa fa-expand" aria-hidden="true"></i>
+      </button>
     </div>
   </div>
 
